# agents_crew

./: .dockerignore  .env.example  .gitignore  .gitkeep_migration  AGENTS.md  CLAUDE.md  Dockerfile  MEMORY.md  Makefile  README.md  SPEC.md  bootstrap.sh  crew.py  docker-compose.yml  e2e_task_test.py  install.sh  litellm-config.yaml  main.py  opencode.json  opencode.json.example  pyproject.toml  server.py  test.txt  test_pipeline.py
.claude/: settings.json
.github/workflows/: ci.yml
.opencode/: config.json
config/: agents.yaml  task.yaml  tasks.yaml
litellm/: config.yaml
mcp/: Dockerfile  requirements.txt  server.py
memory/: Dockerfile  bootstrap.py  requirements.txt  service.py
openclaw/: openclaw.json  system-prompt.md
skills/: README.md  coding-agent.md  coding-workflow.md  memory-agent.md
tests/: test_memory_service.py  test_router.py  test_server.py
