[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai==1.14.5",
    "litellm>=1.84",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require Ollama running locally",
]
