[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-crew"
version = "2.0.0"
description = "Agentic coding infrastructure: Claude Code + LiteLLM + Graphiti memory"
requires-python = ">=3.11"

# Core dependencies — mirror delle versioni pinnate in memory/Dockerfile
# Installale per sviluppo locale del memory service (type checking, IDE support)
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "graphiti-core==0.3.0",
    "neo4j==5.26.0",
    "httpx==0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

# Hatchling non trova un package Python standard (questa è infrastruttura, non una lib).
# Gli diciamo esplicitamente di includere la directory memory/ come package.
[tool.hatch.build.targets.wheel]
packages = ["memory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
