[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents-crew"
version = "2.3.0"
description = "Agentic coding infrastructure: OpenCode + Graphiti memory + FreeLLMAPI hybrid routing"
requires-python = ">=3.11"

# Core dependencies — mirror of versions pinned in memory/Dockerfile
# Install for local development of the memory service (type checking, IDE support)
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "graphiti-core==0.3.0",
    "neo4j==5.26.0",
    "httpx==0.27.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["memory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = ["tests/test_router.py", "tests/test_server.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Exclude legacy placeholder files from collection
norecursedirs = [".venv", "venv", ".git"]
